[package]
name = "wake-on-lan-hook"
version = "0.1.0"
authors = ["Barret Rennie <barret@brennie.ca>"]

[dependencies]
combine = "3.5.2"
failure = "0.1.2"
failure_derive = "0.1.2"
nix = "0.11.0"
slog = "2.3.3"
slog-async = "2.3.0"
slog-term = "2.4.0"
stream-cancel = "0.4.3"
structopt = { version = "0.2.10", features = ["wrap_help"] }
structopt-derive = "0.2.10"
tokio = "0.1.8"
tokio-process = "0.2.2"
tokio-signal = "0.2.5"

[dev-dependencies]
assert_matches = "1.3.0"
